# jwt-authsvc-demo

auth/: Dockerfile  pyproject.toml  rest-client.rest
auth/auth/: alembic.ini  main.py
auth/auth/alembic/: env.py
auth/auth/alembic/versions/: 20250419_0001_create_users_table.py
auth/auth/api/v1/: __init__.py  jwks.py  login.py  logout.py  refresh.py
auth/auth/models/: user.py
auth/auth/schemas/: auth.py
auth/auth/services/: db.py  jwt.py  redis.py  settings.py
backend/: Dockerfile  pyproject.toml
infra/: .gitignore  compose.yaml
infra/scripts/: gen_key.bash  migrate.bash  seed_user.bash
