[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.29.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.29.0",
    "redis[hiredis]==5.0.0",
    "pydantic-settings==2.0.2",
    "alembic==1.15.2",
    "pydantic[email]==2.11.3",
]

[tool.setuptools]
packages = ["auth"]
